# ubic-test-task

./: README.md  main.py  pyproject.toml
tests/: test_parser.py
